--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,2 @@
 Changer ptr en shared_ptr (optimisation mémoire)
-
-Pattern states (fight + vestiaire) -> la hiérarchie de classe est toujours en vie !!!
+Commenter code / titrer
