Open the door get on the floor, everybody walks the dinosaur ~

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ Changer ptr en shared_ptr (optimisation mémoire)
 Commenter code / titrer
 Remplacer auto i fair auto &i
 Dear ImGui
+Getter renvoyant &
